--- a/pages/index.css
+++ b/pages/index.css
@@ -1,270 +1,7 @@
-.page {
-  min-width: 1100px;
-  max-width: 1600px;
-  margin: 0 auto;
-  font-family: Inter, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.header {
-  padding: 30px 80px 40px;
-  height: 800px;
-  display: flex;
-  flex-direction: column;
-  background-image: url(../images/background_header.svg);
-  box-sizing: border-box;
-  background-size: cover;
-  position: relative;
-}
-
-.nav {
-  display: flex;
-  justify-content: space-between;
-}
-
-.nav__links {
-  display: flex;
-  justify-content: space-between;
-  list-style-type: none;
-  gap: 20px;
-  margin: 0;
-  padding: 0;
-}
-
-.nav__link {
-  font-family: "Inter", "Arial", sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.nav__logo {
-  position: relative;
-  left: -50px;
-  height: 39px;
-  width: 105px;
-}
-
-.header__image {
-  position: absolute;
-  top: 124px;
-  right: 5px;
-  height: 568px;
-  width: 646px;
-}
-
-.header__title {
-  margin: 128px 0 0;
-  font-family: "Inter", "Arial", sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 60px;
-  line-height: 72px;
-  letter-spacing: -0.6px;
-  max-width: 729px;
-}
-
-.header__description {
-  margin: 28px 0 0;
-  font-family: "Noto Serif", "Times New Roman", serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-  max-width: 683px;
-}
-
-.header__span-accent {
-  display: block;
-  font-family: "Noto Serif";
-  font-style: italic;
-  font-weight: normal;
-  font-size: 60px;
-  line-height: 72px;
-  color: #3f96f3;
-}
-
-.header__footer {
-  margin-top: auto;
-  display: flex;
-  justify-content: space-between;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  color: #6f6f6f;
-  padding: 0;
-}
-
-.header__paragraph {
-  margin: 0;
-}
-
-.header__paragraph:last-of-type {
-  align-self: flex-end;
-}
-
-.recipes__videos {
-  display: flex;
-  list-style-type: none;
-  justify-content: center;
-  gap: 40px;
-  padding: 0;
-  margin: 0;
-}
-
-.recipes {
-  color: white;
-  background-color: #0a2750;
-  padding: 100px 80px 215px 80px;
-  background-image: url(../images/background_recipes.svg);
-  background-size: cover;
-}
-
-.recipes__title {
-  margin: 0 0 24px;
-  max-width: 580px;
-  font-family: "Inter", "Arial", sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-}
-
-.recipes__subtitle {
-  margin: 0 0 80px;
-  max-width: 438px;
-  font-family: "Noto Serif", "Times New Roman", serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.recipes__video-caption {
-  display: flex;
-  justify-content: space-between;
-  margin: 24px 0 0 0;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.recipes__iframe {
-  border: none;
-  width: 480px;
-  height: 273px;
-}
-
-/* Resvervation */
-
-.reservation {
-  padding: 100px 0 120px 0;
-  background-color: #d9e7ff;
-  background-image: url(../images/background_reservation.svg);
-  background-size: cover;
-}
-
-.reservation__form {
-  display: flex;
-  flex-direction: column;
-  max-width: 385px;
-  margin: 0 auto;
-}
-
-.reservation__title {
-  margin: 0 0 100px 0;
-  text-align: center;
-  font-family: Inter, Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-}
-
-.form__button {
-  border-radius: 4px;
-  background-color: #1878dc;
-  transition: background-color 1s linear 0s;
-  padding: 20px 0;
-  border: none;
-  font-family: Inter, Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  color: #fff;
-}
-
-.form__button:hover {
-  background-color: #3f96f3;
-}
-
-.form__input {
-  border-radius: 4px;
-  width: 100%;
-  box-sizing: border-box;
-  padding: 15px 20px;
-  border: 1px solid #838383;
-  font-family: Inter, Arial, sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.form__input:last-child {
-  margin-bottom: 32px;
-}
-
-.form__label {
-  margin-top: 32px;
-  margin-bottom: 8px;
-  font-family: Inter, Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.form__checkbox {
-  border-radius: 2px;
-}
-
-.form__label {
-  display: block;
-}
-
-.form__fieldset {
-  margin: 0;
-  padding: 0;
-  border: none;
-}
-
-.form__checkbox {
-  border-radius: 2px;
-  margin: 0;
-  width: 20px;
-  height: 20px;
-}
-
-.form__label_type_checkbox {
-  margin: 32px Auto 0;
-  display: flex;
-  gap: 12px;
-}
-
-input::placeholder {
-  color: #838383;
-}
-
-.form__input,
-.form__label,
-.recipes__title {
-  color: #000;
-}
+@import url(../vendor/normalize.css);
+@import url(../blocks/page.css);
+@import url(../blocks/header.css);
+@import url(../blocks/nav.css);
+@import url(../blocks/recipes.css);
+@import url(../blocks/reservation.css);
+@import url(../blocks/form.css);
