--- a/blocks/form.css
+++ b/blocks/form.css
@@ -1,7 +1,7 @@
 .form__button {
   border-radius: 4px;
   background-color: #1878dc;
-  transition: background-color 1s linear 0s;
+  transition: background-color 0.5s linear 0s;
   padding: 20px 0;
   border: none;
   font-family: Inter, Arial, sans-serif;
@@ -10,6 +10,7 @@
   font-size: 16px;
   line-height: 20px;
   color: #fff;
+  cursor: pointer;
 }
 
 .form__button:hover {
