--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -18,6 +18,13 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
+  text-decoration: none;
+  color: #000;
+  transition: opacity 0.5s linear;
+  cursor: pointer;
+}
+.nav__link:hover {
+  opacity: 50%;
 }
 
 .nav__logo {
