--- a/blocks/about.css
+++ b/blocks/about.css
@@ -9,17 +9,19 @@
 
   100% {
     transform: scale(1.1);
+    opacity: 0;
   }
 }
 .about {
   background-color: #0a2850;
   position: relative;
   overflow: hidden;
+  padding: 119px 80px 173px 0;
 }
 
 .about__circle {
-  width: 426px; /* Set the width of the circle */
-  height: 426px; /* Set the height of the circle */
+  width: 426px;
+  height: 426px;
   background-color: #1878dc;
   border-radius: 50%;
   position: absolute;
@@ -37,7 +39,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  margin: 119px 80px 173px auto;
+  margin-left: auto;
   font-family: "Noto Serif", "Times New Roman", serif;
   font-style: normal;
   font-weight: normal;
@@ -63,8 +65,4 @@
 
 .about__paragraph {
   margin: 0;
-}
-
-.about__title_span {
-  display: block;
 }
