--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,6 +1,6 @@
 .footer {
   background: linear-gradient(180deg, #0a2850 0%, #071931 100%);
-  padding: 60px 80px 108px 60px;
+  padding: 60px 80px 60px 80px;
 }
 
 .footer__content {
@@ -66,6 +66,8 @@
   color: #fff;
   transition: opacity 0.5s linear;
   cursor: pointer;
+  display: flex;
+  gap: 10px;
 }
 
 .footer__social-link:hover {
