--- a/blocks/header.css
+++ b/blocks/header.css
@@ -7,6 +7,7 @@
   box-sizing: border-box;
   background-size: cover;
   position: relative;
+  z-index: 0;
 }
 
 .header__image {
@@ -15,10 +16,11 @@
   right: 5px;
   height: 568px;
   width: 646px;
+  z-index: -1;
 }
 
 .header__title {
-  margin: 128px 0 0;
+  margin: 183px 0 0;
   font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -40,7 +42,7 @@
 
 .header__span-accent {
   display: block;
-  font-family: "Noto Serif";
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-style: italic;
   font-weight: normal;
   font-size: 60px;
@@ -52,7 +54,7 @@
   margin-top: auto;
   display: flex;
   justify-content: space-between;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
