--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -2,7 +2,7 @@
   background-color: #fff;
   background-image: url(../images/background_menu.svg);
   background-size: cover;
-  background-repeat: none;
+  background-repeat: no-repeat;
   padding-top: 100px;
   padding-bottom: 100px;
 }
@@ -41,42 +41,4 @@
   flex-wrap: wrap;
   justify-content: center;
   gap: 100px;
-}
-
-.card {
-  width: 540px;
-}
-
-.card__title {
-  margin: 0 0 32px 0;
-  font-family: "Inter", "Arial", sans-serif;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.card__list {
-  padding: 0;
-  list-style-type: none;
-  font-family: "Noto Serif", "Times New Roman", serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.card__list-item {
-  margin-bottom: 16px;
-  display: flex;
-  gap: 10px;
-}
-
-.card__list-item:last-child {
-  margin: 0px;
-}
-
-.card__list-divider {
-  flex-grow: 1;
-  border-bottom: 1px solid black;
 }
