--- a/blocks/about.css
+++ b/blocks/about.css
@@ -16,7 +16,7 @@
   background-color: #0a2850;
   position: relative;
   overflow: hidden;
-  padding: 119px 80px 173px 0;
+  padding: 100px 80px 173px;
 }
 
 .about__circle {
